egonlang-core/res/examples/invalid/let_decl_typed_assign_fn_mismatch_types.eg
let a: number = (a: number, b: number): number => { a + b };

// out: TypeError: mismatched types: expected type `number` but received `function<tuple<number, number>, number>`